# pijul-git-snapshot

libpijul-0.11.1/: Cargo.toml
libpijul-0.11.1/src/: conflict.rs  error.rs  graph.rs  output.rs
libpijul-0.11.1/src/apply/: apply.rs  repair_deleted_context.rs
libpijul-0.11.1/src/backend/: edge.rs  file_header.rs  key.rs  mod.rs  small_string.rs
libpijul-0.11.1/src/optimal_diff/: delete.rs
libpijul-0.11.1/src/patch/: pretty.rs
libpijul-0.11.1/src/unrecord/: edges.rs  mod.rs
pijul-0.11.0/: .ignore  CHANGELOG.md  CONTRIBUTORS.md  Cargo.toml  README.md  shell.nix
pijul-0.11.0/libpijul/: Cargo.toml
pijul-0.11.0/libpijul/src/: file_operations.rs  fs_representation.rs  graph.rs  lib.rs  output.rs  record.rs  signature.rs
pijul-0.11.0/line/: Cargo.toml  README.md
pijul-0.11.0/line/src/: lib.rs  unix.rs  windows.rs
pijul-0.11.0/pijul/: Cargo.toml
pijul-0.11.0/pijul/src/: cli.rs  error.rs  main.rs  meta.rs  relativize.rs
pijul-0.11.0/pijul/src/commands/: add.rs  apply.rs  ask.rs  branches.rs  challenge.rs  checkout.rs  clone.rs  credit.rs  delete_branch.rs  diff.rs  dist.rs  fork.rs  fs_operation.rs  generate_completions.rs  hooks.rs  info.rs  init.rs  key.rs  log.rs  ls.rs  mod.rs  mv.rs  patch.rs  pull.rs  push.rs  record.rs  remote.rs  remove.rs  revert.rs  rollback.rs  show_dependencies.rs  sign.rs  ssh_auth_attempts.rs  status.rs  tag.rs  unrecord.rs
pijul-0.11.0/pijul/tests/: run_tests.sh  test_helper.bash
pijul-0.11.0/pijul/tests/bats/: bats-exec-test
pijul-0.11.0/pijul/tests/cases/: add_from_outside_repo.bats  add_grandchild.bats  add_only_in_repo.bats  add_outside_repo.bats  add_record_pull_delete_record_pull.bats  add_record_pull_edit_record_pull.bats  add_recursive.bats  add_remove_file_unknown.bats  add_remove_nothing_to_record.bats  add_same_file_twice.bats  apply_another_branch.bats  blame.bats  break_context_add_twice.bats  break_context_twice.bats  challenge.bats  conflict_deep_file.bats  conflict_down.bats  conflict_last_line.bats  conflict_needing_epsilon.bats  conflict_up.bats  conflict_without_epsilon.bats  del_last_lines.bats  del_line_with_pseudo.bats  diff.bats  directory_name_conflict_same_name.bats  directory_name_conflict_two_names.bats  dist_works.bats  edit_nested_conflicts.bats  edit_sides_of_conflict.bats  edit_sides_of_conflict2.bats  edit_sides_of_conflict3.bats  editor_cmd_is_empty_string.bats  editor_cmd_is_not_executable.bats  editor_cmd_is_whitespace.bats  editor_cmd_starts_with_whitespace.bats  epsilon.bats  fork_conflict_status.bats  fork_patch.bats  fork_patch_apply.bats  graph_debug.bats  (+82 more)
pijul-0.11.0/pijul/tests/expected/: add_remove_file_unknown  conflicted-short-status  edit_conflict  edit_conflict2  edit_conflict2_alt  edit_conflict3  edit_conflict3_alt  edit_conflict_alt  edit_nested_conflict  long_status  revert_move  short_status
(+12 files in other folders)
