[package]
name = "pijul"
description = "A patch-based distributed version control system, easy to use and fast. Command-line interface."
version = "0.11.0"
authors = ["Pierre-Étienne Meunier","Florent Becker"]
license = "GPL-2.0+"
homepage = "https://pijul.org/"
repository = "https://nest.pijul.com/pijul_org/pijul"

include = [
  "Cargo.toml",
  "COPYING",
  "src/meta.rs",
  "src/error.rs",
  "src/relativize.rs",
  "src/commands/init.rs",
  "src/commands/test.rs",
  "src/commands/pull.rs",
  "src/commands/info.rs",
  "src/commands/log.rs",
  "src/commands/ask.rs",
  "src/commands/mod.rs",
  "src/commands/remote.rs",
  "src/commands/record.rs",
  "src/commands/unrecord.rs",
  "src/commands/mv.rs",
  "src/commands/check.rs",
  "src/commands/escape.rs",
  "src/commands/add.rs",
  "src/commands/credit.rs",
  "src/commands/apply.rs",
  "src/commands/clone.rs",
  "src/commands/patch.rs",
  "src/commands/fs_operation.rs",
  "src/commands/revert.rs",
  "src/commands/fork.rs",
  "src/commands/ls.rs",
  "src/commands/checkout.rs",
  "src/commands/remove.rs",
  "src/commands/push.rs",
  "src/commands/delete_branch.rs",
  "src/commands/show_dependencies.rs",
  "src/commands/branches.rs",
  "src/commands/diff.rs",
  "src/commands/dist.rs",
  "src/commands/signature.rs",
  "src/commands/key.rs",
  "src/commands/status.rs",
  "src/commands/hooks.rs",
  "src/commands/tag.rs",
  "src/commands/sign.rs",
  "src/commands/ssh_auth_attempts.rs",
  "src/commands/rollback.rs",
  "src/commands/challenge.rs",
  "src/commands/generate_completions.rs",
  "src/cli.rs",
  "src/main.rs"
]

[dependencies]
clap = "2.32"
regex = "1.0"
rand = "0.5"
log = "0.4"
chrono = "0.4"
env_logger = "0.5"

futures = "0.1"
tokio = "0.1"
thrussh = "0.20"
thrussh-config = "0.1"
thrussh-keys = "0.11.0"

reqwest = "0.9"

toml = "0.4"
serde = "1.0"
serde_derive = "1.0"
bs58 = "0.2"
hex = "0.3"
term = "0.5"

getch = "0.2"
username = "0.2"
shell-escape = "0.1"
libpijul = "0.11.0"

tar = "0.4"
flate2 = "1.0"
ignore = "0.4"
bincode = "1.0"
tempdir = "0.3"
isatty = "0.1"
progrs = "0.1"

base64 = "0.9"
cryptovec = "0.4"

line = "0.1"
rpassword = "2.0"
serde_json = "1.0"

dirs = "1.0.3"

[target.'cfg(unix)'.dependencies]
pager = "0.14"
tokio-uds = "0.2"

[dev-dependencies]
walkdir = "2.0"
